--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
       <div class="collapse navbar-collapse" id="navbarColor02">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{{ path('send_your_stuff') }}">SendYourStuff</a>
+            <a class="nav-link" href="{{ path("send_your_stuff") }}">SendYourStuff</a>
           </li>
         </ul>
       </div>
@@ -22,6 +22,13 @@
   <main>
     {% block body %}{% endblock %}
   </main>
+  <script src="three.r92.min.js"></script>
+  <script src="vanta.clouds.min.js"></script>
+  <script>
+    VANTA.CLOUDS({
+      el: "main"
+    })
+  </script>
   {% block javascripts %}{% endblock %}
 </body>
 </html>
