Handle uploaded files : save on server + register in database ; refactor

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,8 +22,8 @@
   <main>
     {% block body %}{% endblock %}
   </main>
-  <script src="three.r92.min.js"></script>
-  <script src="vanta.clouds.min.js"></script>
+  <script src="scripts/three.r92.min.js"></script>
+  <script src="scripts/vanta.clouds.min.js"></script>
   <script>
     VANTA.CLOUDS({
       el: "main"
