--- a/templates/send_your_stuff/form.html.twig
+++ b/templates/send_your_stuff/form.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block stylesheets %}
-<link rel="stylesheet" href="send_your_stuff.css">
+<link rel="stylesheet" href="styles/send_your_stuff.css">
 {% endblock %}
 
 {% block body %}
@@ -37,5 +37,5 @@
 {% endblock %}
 
 {% block javascripts %}
-<script src="send_your_stuff.js"></script>
+<script src="scripts/send_your_stuff.js"></script>
 {% endblock %}
