--- a/public/styles/send_your_stuff.css
+++ b/public/styles/send_your_stuff.css
@@ -15,3 +15,15 @@ main > * {
   height: 100%;
   background-color: rgba(78,93,108,0.5);
 }
+
+.l-col {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
