Add link in success page

--- a/templates/send_your_stuff/success.html.twig
+++ b/templates/send_your_stuff/success.html.twig
@@ -16,7 +16,7 @@
 
     <div class="jumbotron col-8 bg-transparent">
       <h1 class="display-3">Success !</h1>
-      <p class="lead">Your file has been uploaded and is now available here.</p>
+      <p class="lead">Your file has been uploaded and is now available <a href="{{ asset('uploads/' ~ upload.attachment) }}">here</a>.</p>
       <p class="lead">A download link has been sent to the recipient.</p>
       <p class="lead">By now, you should have received a confirmation email too.</p>
       <p class="lead">We hope that you enjoyed the flight !</p>
