--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,11 +9,11 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="{{ path("send_your_stuff_home") }}">SYS</a>
+      <a class="navbar-brand" href="{{ url("send_your_stuff_home") }}">SYS</a>
       <div class="collapse navbar-collapse" id="navbarColor02">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{{ path("send_your_stuff_form") }}">SendYourStuff</a>
+            <a class="nav-link" href="{{ url("send_your_stuff_form") }}">SendYourStuff</a>
           </li>
         </ul>
       </div>
@@ -22,8 +22,8 @@
   <main>
     {% block body %}{% endblock %}
   </main>
-  <script src="../scripts/three.r92.min.js"></script>
-  <script src="../scripts/vanta.clouds.min.js"></script>
+  <script src="{{ url("send_your_stuff_main") }}/scripts/three.r92.min.js"></script>
+  <script src="{{ url("send_your_stuff_main") }}/scripts/vanta.clouds.min.js"></script>
   <script>
     VANTA.CLOUDS({
       el: "main"
