--- a/templates/send_your_stuff/mail.html.twig
+++ b/templates/send_your_stuff/mail.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block stylesheets %}
-<link rel="stylesheet" href="../styles/send_your_stuff.css">
+<link rel="stylesheet" href="{{ url("send_your_stuff_main") }}/styles/send_your_stuff.css">
 {% endblock %}
 
 {% block body %}
@@ -11,12 +11,12 @@
   <div class="row">
 
     <div class="col-4 l-col">
-      <img src="../images/daniel-eledut-I59E5L3v1Ec-unsplash.jpg" alt="yellow biplane under blue sky during daytime photo">
+      <img src="{{ url("send_your_stuff_main") }}/images/daniel-eledut-I59E5L3v1Ec-unsplash.jpg" alt="yellow biplane under blue sky during daytime photo">
     </div>
 
     <div class="jumbotron col-8 bg-transparent">
       <h1 class="display-3">Hello {{ upload.getRecipientName }} !</h1>
-      <p class="lead">We got a file for you, which you can download <a href="{{ asset('uploads/' ~ upload.attachment) }}">here</a>.</p>
+      <p class="lead">We got a file for you, which you can download <a href="{{ url("send_your_stuff_main") }}/uploads/{{ upload.attachment }}">here</a>.</p>
       <p class="lead">The file was sent by {{ upload.getSenderName }} ({{ upload.getSenderEmail }}), who left the following message :</p>
       <blockquote class="blockquote">
         <p class="mb-0">"{{ upload.getMessage }}"</p>
@@ -25,7 +25,7 @@
       <hr class="my-4">
       <p>On behalf of the SendYourStuff team, all the best &#128640;</p>
       <p class="lead">
-        <a class="btn btn-primary btn-lg" href="{{ asset('uploads/' ~ upload.attachment) }}" role="button">Download</a>
+        <a class="btn btn-primary btn-lg" href="{{ url("send_your_stuff_main") }}/uploads/{{ upload.attachment }}" role="button">Download</a>
       </p>
     </div>
 
